# audit

./: .gitignore  Makefile  PROJECT_ARCHITECTURE.md  README.md  docker-compose.yml  介绍.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 91928d8bc3eb_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/audit/: __init__.py  file_log.py
backend/app/cli/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  privacy.py
backend/app/ocr/: mineru.py  (+1 more)
backend/tests/: conftest.py  evaluation_test_support.py  planner_test_support.py  test_basic_facts.py  test_build_excel_with_evaluation.py  test_candidate_coverage.py  test_candidate_page_planner.py  test_candidate_range_detection.py  test_cli.py  test_credential_personnel_association.py  test_end_to_end_single_file.py  test_evaluation_merge.py  test_evaluation_provenance.py  test_excel.py  test_excel_output.py  test_guarantee_check.py  test_health.py  test_llm_config.py  test_llm_integration.py  test_llm_router.py  test_llm_verification.py  test_models.py  test_page_evaluation.py  test_page_evaluation_importer.py  test_page_features.py  test_pdf_parser.py  test_personnel_check.py  test_personnel_creation_gates.py  test_personnel_extractor.py  test_personnel_identity_validator.py  test_personnel_table_coordinate_extraction.py  test_personnel_table_strategy.py  test_plan_single_file_review_cli.py  test_quote_check.py  test_rejected_personnel_candidates.py  test_tasks.py  test_toc_parser.py  test_web_review_api.py
(+45 files in other folders)
