[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bid-review-backend"
version = "0.1.0"
description = "Production-oriented bid document review backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "celery[redis]>=5.4,<6",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "openai>=1.0,<2",
  "openpyxl>=3.1,<4",
  "pdfplumber>=0.11,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "psycopg[binary]>=3.2,<4",
  "pymupdf>=1.25,<2",
  "python-multipart>=0.0.20,<1",
  "python-dotenv>=1,<2",
  "redis>=5.2,<7",
  "sqlalchemy>=2.0,<3",
  "structlog>=24.4,<26",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
bid-review = "app.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
